<resources>
    <string name="app_name">Pallavi Kaushik</string>
    <string name="dummy_stock_name">SLV</string>
    <string name="dummy_current_price">0.0</string>
    <string name="open">Open :</string>
    <string name="high">High :</string>
    <string name="low">Low:</string>
    <string name="dummy_high">0.0</string>
    <string name="pallavi">Pallavi</string>
    <string name="kaushik">Kaushik</string>
    <string name="refresh">refresh</string>
    <string name="side_menu">side menu</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="save_data">Save Data</string>
    <string name="stock_data">stock_data</string>
    <string name="data">Data</string>
    <string name="date">Date</string>
    <string name="dummy_date">28–09-2022</string>
    <string name="silver_report">Silver Report</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="not_decided_yet">NOT DECIDED YET</string>
    <string name="both_side">MAY BE BOTH SIDE</string>
    <string name="important_points">Important Points</string>
    <string name="SlV_breaks_high">1. SLV has broken yesterday\'s high</string>
    <string name="SlV_breaks_low">1. SLV has broken yesterday\'s low</string>
    <string name="SlV_not_breaks_high_low">1. SLV has not broken yesterday\'s high and low</string>
    <string name="SLV_breaks_high_low">1. SLV has broken yesterday\'s high and low</string>
    <string name="GLD_breaks_high">2. GLD has broken yesterday\'s high</string>
    <string name="GLD_breaks_low">2. GLD has broken yesterday\'s low</string>
    <string name="GLD_not_breaks_high_low">2. GLD has not broken yesterday\'s high and low</string>
    <string name="GLD_breaks_high_low">2. GLD has broken yesterday\'s high and low</string>
    <string name="RWM_breaks_high">3. RWM has broken yesterday\'s high</string>
    <string name="RWM_breaks_low">3. RWM has broken yesterday\'s low</string>
    <string name="RWM_not_breaks_high_low">3. RWM has not broken yesterday\'s high and low</string>
    <string name="RWM_breaks_high_low">3. RWM has broken yesterday\'s high and low</string>
    <string name="IWM_breaks_high">4. IWM has broken yesterday\'s high</string>
    <string name="IWM_breaks_low">4. IWM has broken yesterday\'s low</string>
    <string name="IWM_not_breaks_high_low">4. IWM has not broken yesterday\'s high and low</string>
    <string name="IWM_breaks_high_low">4. IWM has broken yesterday\'s high and low</string>
    <string name="email">pallavikaushik0007@gmail.com</string>
    <string name="password">asnpk1679e</string>
    <string name="appicon">AppIcon</string>
    <string name="dummy_silver_buy">Silver Buy</string>
    <string name="silver_buy">Silver Buy</string>
    <string name="silver_sell">Silver Sell</string>
    <string name="silver_any_side">Silver Any Side</string>
    <string name="channel_name">PallaviKauhik</string>
    <string name="channel_description">PallaviKaushik</string>
</resources>