<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:padding="10dp">


            <TextView
                android:id="@+id/stock_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_stock_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/dummy_current_price"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/low_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/monthly_low" />

            <TextView
                android:id="@+id/open_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_high"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/silver_gold_open_price"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stock_name"
                app:layout_constraintVertical_bias="0.166" />

            <TextView
                android:id="@+id/high_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_high"
                android:textColor="@color/high_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/silver_gold_high_price"
                app:layout_constraintEnd_toEndOf="@+id/silver_gold_high_price"
                app:layout_constraintHorizontal_bias="0.472"
                app:layout_constraintStart_toStartOf="@+id/silver_gold_high_price"
                app:layout_constraintTop_toBottomOf="@+id/monthly_high"
                app:layout_constraintVertical_bias="0.653" />

            <TextView
                android:id="@+id/low_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_high"
                android:textColor="@color/low_red"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/silver_gold_low_price"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/silver_gold_low_price"
                app:layout_constraintTop_toBottomOf="@+id/indicator_main_first"
                app:layout_constraintVertical_bias="0.258" />

            <TextView
                android:id="@+id/monthly_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:text="@string/dummy_high"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/stock_name"
                app:layout_constraintStart_toEndOf="@+id/stock_name" />

            <TextView
                android:id="@+id/monthly_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/dummy_high"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/indicator_main_second"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/indicator_main_first"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/silver_buy"
                android:layout_marginLeft="65dp"
                app:layout_constraintBottom_toBottomOf="@+id/monthly_low"
                app:layout_constraintEnd_toStartOf="@+id/indicator_main_second"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/monthly_high"
                app:layout_constraintTop_toTopOf="@+id/monthly_low"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginStart="55dp" />

            <TextView
                android:id="@+id/indicator_main_second"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:background="@color/silver_sell"
                app:layout_constraintBottom_toBottomOf="@+id/monthly_high"
                app:layout_constraintEnd_toStartOf="@+id/indicator_main_first"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/monthly_high"
                app:layout_constraintTop_toTopOf="@+id/monthly_high"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/silver_gold_current_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_current_price"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/silver_gold_low_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.854"
                app:layout_constraintStart_toEndOf="@+id/silver_gold_open_price" />

            <TextView
                android:id="@+id/silver_gold_open_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:text="@string/dummy_high"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_price"
                app:layout_constraintVertical_bias="0.387" />

            <TextView
                android:id="@+id/silver_gold_high_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:text="@string/dummy_high"
                android:textColor="@color/high_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/silver_gold_open_price"
                app:layout_constraintEnd_toStartOf="@+id/silver_gold_low_price"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toEndOf="@+id/silver_gold_open_price" />

            <TextView
                android:id="@+id/silver_gold_low_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="68dp"
                android:layout_marginRight="68dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/dummy_high"
                android:textColor="@color/low_red"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/silver_gold_current_price"
                app:layout_constraintTop_toBottomOf="@+id/low_price"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>